--- a/package.json
+++ b/package.json
@@ -31,24 +31,10 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "graphql": "^16.6.0",
-    "husky": "^8.0.3",
+    "pre-commit": "^8.0.3",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "relay-config": "^12.0.1",
     "typescript": "^5.0.2"
-  },
-  "prettier": {
-    "printWidth": 80,
-    "tabWidth": 2,
-    "useTabs": false,
-    "semi": true,
-    "singleQuote": false,
-    "quoteProps": "as-needed",
-    "jsxSingleQuote": false,
-    "trailingComma": "all",
-    "bracketSpacing": true,
-    "bracketSameLine": false,
-    "arrowParens": "always",
-    "endOfLine": "lf"
   }
 }
