Revert package json

--- a/package.json
+++ b/package.json
@@ -36,5 +36,19 @@
     "react": "^18.2.0",
     "relay-config": "^12.0.1",
     "typescript": "^5.0.2"
+  },
+  "prettier": {
+    "printWidth": 80,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": false,
+    "quoteProps": "as-needed",
+    "jsxSingleQuote": false,
+    "trailingComma": "all",
+    "bracketSpacing": true,
+    "bracketSameLine": false,
+    "arrowParens": "always",
+    "endOfLine": "lf"
   }
 }
